fixed portfolio section mobile responsiveness. Now just have to fix modal. Also, changed Conan logo becauase it wasn't loading the image

--- a/style.css
+++ b/style.css
@@ -644,7 +644,7 @@ li{
     z-index: 100;
     display: none;
     box-sizing: border-box;  
-    max-width: 100;
+    max-width: 100%;
     max-height: 100%;
 }
 
@@ -970,6 +970,31 @@ li{
         border-radius: 10px;
     }
 
+    #navBar{
+        width: 100%;
+        background-color: rgb(59, 59, 59);
+        display: inline-block;
+        text-align: center;
+        height: fit-content;
+        padding-top: 2vh;
+        padding-bottom: 2vh;
+        vertical-align:middle
+        /* position: relative; */
+    }
+
+    .navButton{
+        display: inline;
+        color: white;
+        transition: 0.2s;
+        padding: 0.5vh;
+        border-radius: 20%;
+    }
+
+    #homeButton{
+        margin-left: 2vw;
+    }
+    
+
     .resume{
      display: none;
     }
@@ -1071,6 +1096,91 @@ li{
         word-wrap: break-word;
     }
     
+    #portfolioContainer{
+        width: 90%;
+        margin: 0 auto;
+    }
      
+    #portfolioTitle{
+        text-align: center;
+        padding-top: 0vh;
+        margin-bottom: 5vh;
+    }
+
+    .cardContainer{
+        display: inline-block;
+        height: 100%
+    }
+
+    .card{
+        width: 100%;
+        margin-left: 0%;
+        box-sizing: border-box;
+        position: relative;
+    }
+
+    .card1{
+        margin-left: 0%!important; 
+        box-sizing: border-box;
+    }
+
+    .cardBottom{
+        /* width: 50%;
+        margin-left: 5%; */
+        float: none;
+        box-sizing: border-box;
+        width: 100%;
+        /* right: 0; */
+        position: relative;
+        /* margin-left: 5%; */
+    }
     
+    .card1Bottom{
+        /* margin-left: 18%; */
+        /* width: 45%;
+        box-sizing: border-box; */
+        float: none;
+        box-sizing: border-box;
+        width: 100%;
+        position: relative;
+    }
+
+    .cardImage{
+        min-height: 68%;
+        max-height: 83%;
+        margin-bottom: 3vh;
+        width: 100%;
+        margin-top: 2%;
+        cursor: pointer;
+        box-sizing: border-box;
+        position: relative;
+        z-index: 2;
+    }
+
+    .cardImageBottom{
+        height: 100%;
+        width: 100%;
+        margin-top: 2%;
+        margin-bottom: 3vh;
+        cursor: pointer;
+        box-sizing: border-box;
+        position: relative;
+        z-index: 2;
+        /* display: block; */
+    }
+
+    #modal1Content{
+        z-index: 2;
+        position: relative;
+        text-align: center;
+        box-sizing: border-box;
+        width: 90%;
+        height: 90vh;
+        margin: 0 auto;
+        background-color: rgb(241, 241, 241);
+        z-index: 101;
+        top: 1vh;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.397);
+        overflow: auto;
+    }
   }
